argo/services/quiz0/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: quiz0
  labels:
    app.kubernetes.io/name: quiz0
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: quiz0
  ports:
    - name: http
      port: 80
      targetPort: http
